--- a/style2.css
+++ b/style2.css
@@ -50,10 +50,15 @@ h1 {
     width:20px;
 }
 .brain {
-    width:450px;
+    width:580px;
     height:400px;
 }
 .rightside {
     background:white;
+}
+
+.des {
+    padding-left:150px;
+    text-align: left;
 }
 
